--- a/_scss/pages/study.scss
+++ b/_scss/pages/study.scss
@@ -82,30 +82,30 @@
 }
 .courses_inner {
     text-align: center;
-    width: 95%;
-    max-width: 1000px;
+    width: 99%;
+    max-width: 1100px;
     margin-left: auto;
     margin-right: auto;
     vertical-align: middle;
-    padding: 1%;
+    padding: 5px;
 }
 .course {
     background-color: #fff;
-    text-align:center;
-    min-width: 150px;
+    text-align: center;
+    min-width: 160px;
     width: 22%;
-    max-width: 320px;    
+    max-width: 250px;    
     display: inline-block;
-    margin: 6px;
+    margin: 5px;
     margin-bottom: 25px;
-    padding: 4px;
+    padding: 2px;
     border: solid 1px #aaa;
 }
 .course_icon {
     // background-color: #f00;
 }
-.course_icon img {
-    width: 99%;
+.course_icon img, .course_icon video {
+    width: 100%;
 }
 .course_description {
     // background-color: #0f0;
