fix hamburger layout

--- a/_scss/modules/header.scss
+++ b/_scss/modules/header.scss
@@ -109,9 +109,10 @@
         height:$headerHeight;
         .hamburger{
             display: block;
-            position: fixed;
-            float:right;
-            right:10px;
+            // position: absolute;
+            float: right;
+            right: 10px;
+            margin-right: 10px;
             font-size:30px;
             color:$white;
             z-index: 1000;
