--- a/_scss/modules/header.scss
+++ b/_scss/modules/header.scss
@@ -137,6 +137,7 @@
             display: none;
             background-color:$black;
             padding-bottom:60px;
+            vertical-align: middle;
             opacity:0;
             transition:all 0.5s ease;
             overflow-y:scroll;
