--- a/_scss/pages/join.scss
+++ b/_scss/pages/join.scss
@@ -5,3 +5,9 @@
     // margin-right: auto;
     width: 100%;
 }
+
+
+.initiatives li, .join_catch li {
+    margin-bottom: 1.5em;
+    line-height: 150%;
+}
