--- a/css/style.scss
+++ b/css/style.scss
@@ -15,6 +15,7 @@ html, body {
 }
 
 @import 'pages/common.scss';
+@import 'pages/work.scss';
 @import 'pages/study.scss';
 @import 'pages/gallery.scss';
 @import 'pages/join.scss';
