more writing updates

--- a/_scss/pages/study.scss
+++ b/_scss/pages/study.scss
@@ -1,9 +1,11 @@
 
 .group {
     // background-color: #f00;
-    width: 90%;
-    margin: 2%;
+    width: 46%;
+    margin: 1%;
     border: solid 1px #555;
+    display: inline-block;
+    vertical-align: top;
 }
 
 .group_name {
