--- a/_scss/pages/home.scss
+++ b/_scss/pages/home.scss
@@ -198,25 +198,26 @@
 }
 
 #future_description {
-    position: absolute;
-    width: 85%;
-    max-width: 1100px;
-    left: 50%;
-    top: 3%;
+    // position: absolute;
+    background-color: rgb(255, 210, 132);
+    // width: 85%;
+    // max-width: 1100px;
+    // left: 50%;
+    // top: 3%;
 }
 #future_description2 {
-    position: relative; 
-    left: -50%;
+    // position: relative; 
+    // left: -50%;
     font-weight: bold;
-    background-color: rgba(255, 255, 255, 0.7);
+    // background-color: rgba(255, 255, 255, 0.7);
     padding: 2%;
 }
 #future_teaser {
-    // font-size: 1.5em;
-    font-size: calc(13px + 1.2vw);
+    // font-size: 1.0em;
+    // font-size: calc(13px + 1.2vw);
     font-weight: bold;
     // text-shadow: 2px 2px #333;
-    padding: 1%;
+    padding: 2%;
 }
 
 #future_info {
@@ -225,14 +226,57 @@
 #future_info1 {
     // font-size: 1.3em;
     font-size: calc(11px + 1.1vw);
-    padding: 1%;
+    padding: 2%;
 }
 #future_info2 {
     // font-size: 1.1em;
     font-size: calc(10px + 1.0vw);
-    padding: 1%
+    padding: 2%;
 }
 
+#apply_mars {
+    padding: 2%;
+    background-color: rgb(255, 210, 132);
+    margin-left: auto;
+    margin-right: auto;
+}
+#follow_mars {
+    padding: 2%;
+    margin-left: auto;
+    margin-right: auto;
+}
+#generic_title {
+    font-size: calc(14px + 1.25vw);
+    font-weight: bold;
+    margin: 3%;
+    text-align: left;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+}
+#generic_description {
+    font-size: calc(10px + 1.15vw);
+    margin: 3%;
+    text-align: left;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+}
+#generic_description2 {
+    font-size: calc(12px + 1.2vw);
+    background-color: #f602f2b3;
+    color: #fff;
+    margin: 3%;
+    padding: 3%;
+    width: "80%";
+    text-align: left;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+}
+#generic_description2 a, #generic_description2 a:hover {
+    color: #fff;
+}
 
 
 /* -- JOIN -- */
