--- a/_scss/pages/common.scss
+++ b/_scss/pages/common.scss
@@ -29,14 +29,13 @@ body {
 #container {
     width: 95%;
     max-width: 1000px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 40px;
+    margin: 0 auto 40px;
 }
 
 #container p, #container ul {
-    font-size: 1.5em;
+    font-size: 1.25em;
     line-height: 150%;
+    color: #333;
 }
 
 #container h2 {
@@ -51,12 +50,8 @@ a {
     color: #000;
 }
 
-a:visited {
-    color: #000;
-}
-
 a:hover {
-    color: #f00;
-    text-decoration: underline #f00;
+    color: #ED4C41;
+    text-decoration: underline #ED4C41;
 }
 
